@@ -1,6 +1,7 @@
 ##########################################################################
 #  
 #  Copyright (c) 2012, John Haddon. All rights reserved.
+#  Copyright (c) 2013, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -143,17 +144,6 @@ GafferUI.PlugValueWidget.registerCreator(
 	labelsAndValues = (
 		( "Perspective", "perspective" ),
 		( "Orthographic", "orthographic" ),
-	),
-)
-
-# RenderCamera
-
-GafferUI.PlugValueWidget.registerCreator(
-	GafferScene.RenderCamera.staticTypeId(),
-	"options.renderCamera.value",
-	lambda plug : GafferUI.PathPlugValueWidget(
-		plug,
-		path = GafferScene.ScenePath( plug.node()["in"], plug.node().scriptNode().context(), "/" ),
 	),
 )
 
