@@ -1,7 +1,6 @@
 ##########################################################################
 #  
-#  Copyright (c) 2012, John Haddon. All rights reserved.
-#  Copyright (c) 2012-2013, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2013, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -35,17 +34,34 @@
 #  
 ##########################################################################
 
-from _GafferSceneUI import *
+import Gaffer
+import GafferUI
+import GafferScene
 
-from SceneEditor import SceneEditor
-from SceneInspector import SceneInspector
-from FilterPlugValueWidget import FilterPlugValueWidget
-import SceneNodeUI
-import RenderUI
-import DisplaysUI
-import OptionsUI
-import OpenGLAttributesUI
-from AlembicPathPreview import AlembicPathPreview
-import SceneContextVariablesUI
-import SceneWriterUI
-import StandardOptionsUI
+GafferUI.PlugValueWidget.registerCreator(
+	
+	GafferScene.StandardOptions.staticTypeId(),
+	"options",
+	GafferUI.SectionedCompoundDataPlugValueWidget,
+	sections = (
+		
+		(
+			"Camera",
+			(
+				( "render:camera", "Camera" ),
+				( "render:resolution", "Resolution" ),
+			),
+		),
+		
+	),
+	
+)
+
+GafferUI.PlugValueWidget.registerCreator(
+	GafferScene.StandardOptions.staticTypeId(),
+	"options.renderCamera.value",
+	lambda plug : GafferUI.PathPlugValueWidget(
+		plug,
+		path = GafferScene.ScenePath( plug.node()["in"], plug.node().scriptNode().context(), "/" ),
+	),
+)
