@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2012, John Haddon. All rights reserved.
+//  Copyright (c) 2013, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -51,7 +52,6 @@ Camera::Camera( const std::string &name )
 	:	ObjectSource( name, "camera" )
 {
 	storeIndexOfNextChild( g_firstPlugIndex );
-	addChild( new V2iPlug( "resolution", Plug::In, V2i( 1024, 778 ) ) );
 	addChild( new StringPlug( "projection", Plug::In, "perspective" ) );
 	addChild( new FloatPlug( "fieldOfView", Plug::In, 50.0f, 0.0f, 180.0f ) );
 	addChild( new V2fPlug( "clippingPlanes", Plug::In, V2f( 0.01, 100000 ), V2f( 0 ) ) );
@@ -61,44 +61,34 @@ Camera::~Camera()
 {
 }
 
-Gaffer::V2iPlug *Camera::resolutionPlug()
-{
-	return getChild<V2iPlug>( g_firstPlugIndex );
-}
-
-const Gaffer::V2iPlug *Camera::resolutionPlug() const
-{
-	return getChild<V2iPlug>( g_firstPlugIndex );
-}
-
 Gaffer::StringPlug *Camera::projectionPlug()
 {
-	return getChild<StringPlug>( g_firstPlugIndex + 1 );
+	return getChild<StringPlug>( g_firstPlugIndex );
 }
 
 const Gaffer::StringPlug *Camera::projectionPlug() const
 {
-	return getChild<StringPlug>( g_firstPlugIndex + 1 );
+	return getChild<StringPlug>( g_firstPlugIndex  );
 }
 
 Gaffer::FloatPlug *Camera::fieldOfViewPlug()
 {
-	return getChild<FloatPlug>( g_firstPlugIndex + 2 );
+	return getChild<FloatPlug>( g_firstPlugIndex + 1 );
 }
 
 const Gaffer::FloatPlug *Camera::fieldOfViewPlug() const
 {
-	return getChild<FloatPlug>( g_firstPlugIndex + 2 );
+	return getChild<FloatPlug>( g_firstPlugIndex + 1 );
 }
 
 Gaffer::V2fPlug *Camera::clippingPlanesPlug()
 {
-	return getChild<V2fPlug>( g_firstPlugIndex + 3 );
+	return getChild<V2fPlug>( g_firstPlugIndex + 2 );
 }
 
 const Gaffer::V2fPlug *Camera::clippingPlanesPlug() const
 {
-	return getChild<V2fPlug>( g_firstPlugIndex + 3 );
+	return getChild<V2fPlug>( g_firstPlugIndex + 2 );
 }
 
 void Camera::affects( const ValuePlug *input, AffectedPlugsContainer &outputs ) const
@@ -108,8 +98,7 @@ void Camera::affects( const ValuePlug *input, AffectedPlugsContainer &outputs ) 
 	if(
 		input == projectionPlug() ||
 		input == fieldOfViewPlug() ||
-		input->parent<Plug>() == clippingPlanesPlug() ||
-		input->parent<Plug>() == resolutionPlug()
+		input->parent<Plug>() == clippingPlanesPlug()
 	)
 	{
 		outputs.push_back( sourcePlug() );
@@ -118,7 +107,6 @@ void Camera::affects( const ValuePlug *input, AffectedPlugsContainer &outputs ) 
 
 void Camera::hashSource( const Gaffer::Context *context, IECore::MurmurHash &h ) const
 {
-	resolutionPlug()->hash( h );
 	projectionPlug()->hash( h );
 	fieldOfViewPlug()->hash( h );
 	clippingPlanesPlug()->hash( h );
@@ -127,10 +115,8 @@ void Camera::hashSource( const Gaffer::Context *context, IECore::MurmurHash &h )
 IECore::ConstObjectPtr Camera::computeSource( const Context *context ) const
 {
 	IECore::CameraPtr result = new IECore::Camera;
-	result->parameters()["resolution"] = new IECore::V2iData( resolutionPlug()->getValue() );
 	result->parameters()["projection"] = new IECore::StringData( projectionPlug()->getValue() );
 	result->parameters()["projection:fov"] = new IECore::FloatData( fieldOfViewPlug()->getValue() );
 	result->parameters()["clippingPlanes"] = new IECore::V2fData( clippingPlanesPlug()->getValue() );
-	result->addStandardParameters();
 	return result;
 }
